syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.leo";
option java_outer_classname = "AuthJWT";
option objc_class_prefix = "HLW";

message SigninRequest {
  string email = 1;
  string password = 2;
  string credential = 3;
  string key = 4;
}

message SigninReply {
  bool success = 1;
  string error = 2;
  string token = 3;
}

message VerifyTokenRequest {
  string token = 1;
  string projectId = 2;
}

message Payload {
  string id = 1;
  string email = 2;
  int64 issueAt = 3;
  int64 expiredAt = 4;
}

message VerifyTokenReply {
  bool success = 1;
  string error = 2;
  Payload Payload = 3;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenReply {
  bool success = 1;
  string error = 2;
  string token = 3;
}

service Authenticator {
  rpc SignIn (SigninRequest) returns (SigninReply) {};

  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenReply) {};

  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenReply) {};
}